# term2-p5

./: .CMakeLists.txt.swp  readme.md
buildTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: .MCPTest.cpp.swp  .MPC.cpp.swo  .MPC.cpp.swp  .main.cpp.swp  AllTests.cpp  MCPTest.cpp  MPC.cpp  MPC.h  main.cpp
